k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fellowship-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${CERT_ARN}
spec:
  rules:
  - host: fellowshiphomeloans-dev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fellowship-service
            port:
              number: 80
